@@ -37,19 +37,7 @@ static const GdkDeviceAxis gdk_input_core_axes[] = {
   { GDK_AXIS_Y, 0, 0 }
 };
 
-static GdkDevice gdk_input_core_info =
-{
-  "Core Pointer",
-  GDK_SOURCE_MOUSE,
-  GDK_MODE_SCREEN,
-  TRUE,
-  2,
-  (GdkDeviceAxis *)gdk_input_core_axes,
-  0,
-  NULL
-};
-
-GdkDevice *gdk_core_pointer = (GdkDevice *)&gdk_input_core_info;
+GdkDevice *gdk_core_pointer = NULL;
 
 /* Global variables  */
 
@@ -58,6 +46,61 @@ gint              gdk_input_gxid_port;
 gint              gdk_input_ignore_core;
 GList            *gdk_input_windows;
 GList            *gdk_input_devices;
+
+void
+_gdk_init_input_core (void)
+{
+  gdk_core_pointer = g_object_new (GDK_TYPE_DEVICE, NULL);
+  
+  gdk_core_pointer->name = "Core Pointer";
+  gdk_core_pointer->source = GDK_SOURCE_MOUSE;
+  gdk_core_pointer->mode = GDK_MODE_SCREEN;
+  gdk_core_pointer->has_cursor = TRUE;
+  gdk_core_pointer->num_axes = 2;
+  gdk_core_pointer->axes = gdk_input_core_axes;
+  gdk_core_pointer->num_keys = 0;
+  gdk_core_pointer->keys = NULL;
+}
+
+static void
+gdk_device_finalize (GObject *object)
+{
+  g_error ("A GdkDevice object was finalized. This should not happen");
+}
+
+static void
+gdk_device_class_init (GObjectClass *class)
+{
+  class->finalize = gdk_device_finalize;
+}
+
+GType
+gdk_device_get_type (void)
+{
+  static GType object_type = 0;
+
+  if (!object_type)
+    {
+      static const GTypeInfo object_info =
+      {
+        sizeof (GdkDeviceClass),
+        (GBaseInitFunc) NULL,
+        (GBaseFinalizeFunc) NULL,
+        (GClassInitFunc) gdk_device_class_init,
+        NULL,           /* class_finalize */
+        NULL,           /* class_data */
+        sizeof (GdkDevicePrivate),
+        0,              /* n_preallocs */
+        (GInstanceInitFunc) NULL,
+      };
+      
+      object_type = g_type_register_static (G_TYPE_OBJECT,
+                                            "GdkDevice",
+                                            &object_info, 0);
+    }
+  
+  return object_type;
+}
 
 GList *
 gdk_devices_list (void)
